<resources>
    <string name="app_name">Quick Math</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="game_rules">
         Rules of the game: there will be three figures in front of you, two below and one above, two of them will have
         numbers. It is necessary that the sum of the numbers from the two lower figures is equal to the number in the upper figure,
         To do this, you need to insert the missing number.\n\nExample: in the upper circle there is the number 7, in one
         from the bottom there is a question mark, and in the other the number 4. This means that in place of the question mark there should be
         the number 3 because 3 + 4 = 7
     </string>
    <string name="button_understand">I understand</string>
    <string name="choose_difficulty_level">Choose difficulty level:</string>
    <string name="difficulty_level_debug">Debug</string>
    <string name="difficulty_level_easy">Easy</string>
    <string name="difficulty_level_normal">Normal</string>
    <string name="difficulty_level_hard">Hard</string>
    <string name="progress_answers">Correct answers %s (minimum %s)</string>
    <string name="question_mark">\?</string>
    <string name="game_over">Game over!</string>
    <string name="retry">Retry</string>
    <string name="required_percentage">Correct answers percentage required: %s</string>
    <string name="required_score">Correct answers required: %s</string>
    <string name="score_answers">Your score: %s</string>
    <string name="score_percentage">Correct answers percentage: %s</string>
</resources>