<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/choose_level_fragment_title_margin"
        android:text="@string/choose_difficulty_level"
        android:textSize="@dimen/choose_level_fragment_title_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonLevelDebug"
        style="@style/DifficultyLevelStyle"
        android:text="@string/difficulty_level_debug"
        />

    <Button
        android:id="@+id/buttonLevelEasy"
        style="@style/DifficultyLevelStyle"
        android:backgroundTint="@color/difficulty_level_easy"
        android:text="@string/difficulty_level_easy"
        />

    <Button
        android:id="@+id/buttonLevelNormal"
        style="@style/DifficultyLevelStyle"
        android:backgroundTint="@color/difficulty_level_normal"
        android:text="@string/difficulty_level_normal"
        />

    <Button
        android:id="@+id/buttonLevelHard"
        style="@style/DifficultyLevelStyle"
        android:backgroundTint="@color/difficulty_level_hard"
        android:text="@string/difficulty_level_hard"
        />

</LinearLayout>