<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/welcome_fragment_logo_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/welcome_fragment_logo_margin"
            android:contentDescription="@string/welcome_logo"
            android:src="@drawable/ic_brain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/welcome_fragment_app_name_margin"
            android:text="@string/app_name"
            android:textSize="@dimen/welcome_fragment_app_name_text_size"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/welcome_fragment_rules_margin"
            android:text="@string/game_rules"
            android:textSize="@dimen/welcome_fragment_rules_text_size"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <Button
            android:id="@+id/buttonUnderstand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/button_understand"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>